tests/macros/plugin/filter.rs
fn main() {
    let q = inquisition::questions![plugin { filter: todo!() }];
}
